[package]
name = "actix-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.0"
cargo-watch = "8.4.1"
config = "0.13.4"
deadpool-postgres =  { version = "0.11.0", features = ["serde"] }
derive_more = "0.99.17"
dotenvy = "0.15.7"
env_logger = "0.10.1"
mime = "0.3.17"
native-tls = "0.2.11"
postgres-native-tls = "0.5.0"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.1"
tokio = { version = "1.34.0", features = ["full"]}
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.1.5"
tokio-postgres = "0.7.10"
